--- a/index.html
+++ b/index.html
@@ -18,13 +18,83 @@
         </div>
         <img src="imagens/imagem_um.png" alt="">
     </section>
-    <section>
-        <img src="imagens/imagem_dois_esquerda.png" alt="">
-        <div>
+    <section class="introducao">
+        <img class="um" src="imagens/imagem_dois_esquerda.png" alt="">
+        <div class="intro-info">
             <h2>Dê uma espiada</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis adipisci excepturi qui in molestiae. Vel cumque magnam quo, commodi tempore officiis quae. Eligendi deleniti veniam voluptatem, maxime id natus unde.</p>
         </div>
-        <img src="imagens/imagem_dois_direita.png" alt="">
+        <img class="dois" src="imagens/imagem_dois_direita.png" alt="">
     </section>
+    <section>
+        <div>
+            <h2>ORGÂNICO</h2>
+            <p>ingredientes puros e naturais</p>
+            <h2>GENTIL</h2>
+            <p>seguro para a pele sensível</p>
+            <h2>EFICAZ</h2>
+            <p>testado clinicamente</p>
+        </div>
+        <img src="imagens/imagem_tres.png" alt="">
+    </section>
+    <section>
+        <div>
+            <img src="imagens/imagem_quatro_um.png" alt="">
+            <p>Extratos botânicos</p>
+        </div>
+        <div>
+            <img src="imagens/imagem_quatro_dois.png" alt="">
+            <p>Pura água termal</p>
+        </div>
+        <div>
+            <img src="imagens/imagem_quatro_tres.png" alt="">
+            <p>Enriquecido com vitaminas</p>
+        </div>
+    </section>
+    <section>
+        <h1>SEJA A PRIMERIA A EXPERIMENTAR A EFICÁCIA DE OZONIA</h1>
+        <div>
+            <img src="imagens/imagem_cinco_um.png" alt="">
+            <img src="imagens/imagem_cinco_dois.png" alt="">
+            <img src="imagens/imagem_cinco_tres.png" alt="">
+            <img src="imagens/imagem_cinco_quatro.png" alt="">
+        </div>
+        <button>
+            <p>confira</p>
+        </button>
+    </section>
+    <section>
+        <h2>Beauty</h2>
+        <p>CUIDADOS DE CONFIANÇA DESDE XXXX</p>
+        <div>
+            <h2>MANTENHA CONTATO!</h2>
+            <p>Instagram</p>
+            <p>Twitter</p>
+            <p>Facebook</p>
+            <p>Linkedin</p>
+        </div>
+        <div>
+            <h2>ONDE NOS ENCONTRAR</h2>
+            <p>ESTADO</p>
+            <p>Rua qualquer, 00</p>
+            <p>1234-567 Estado</p>
+            <p>Brasil</p>
+        </div>
+        <div>
+            <p>ESTADO</p>
+            <p>Rua qualquer, 01</p>
+            <p>1234-567 Estado</p>
+            <p>Brasil</p>
+        </div>
+        <div>
+            <p>ESTADO</p>
+            <p>Rua qualquer, 02</p>
+            <p>1234-567 Estado</p>
+            <p>Brasil</p>
+        </div>
+    </section>
+    <footer>
+        <p>Exemplo de web página</p>
+    </footer>
 </body>
 </html>
